# chess-transformers

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.py  criteria.py  datasets.py  environment.yml  model.py  models.py  play.ipynb  prepare_data.py  pyproject.toml  requirements.txt  s00_filter_games.sh  s01_prepare_data.py  s02_build_vocab.py  s03_encode_data.py  s04_split_data.py  s05_train.py  s06_average_checkpoints.py  s07_eval.py  s08_play.ipynb  s08_play.py  s09_stockfish.ipynb  setup.py  utils.py
chess_transformers/: __init__.py
chess_transformers/configs/: __init__.py
configs/: CT_ED_0.py
games/: LL 1 | CT_ED_0 B | GAMES 500 |  W 486 |  L 0 |  D 14.pgn  LL 2 | CT_ED_0 B | GAMES 500 |  W 489 |  L 0 |  D 11.pgn  LL 4 | CT_ED_0 B | GAMES 500 |  W 159 |  L 276 |  D 65.pgn  LL 5 | CT_ED_0 B | GAMES 500 |  W 76 |  L 388 |  D 36.pgn  LL 6 | CT_ED_0 B | GAMES 500 |  W 11 |  L 471 |  D 18.pgn
stockfish_play/: LL 1 | CT B | GAMES 500 |  W 494 |  L 0 |  D 6.pgn  LL 1 | CT W | GAMES 500 |  W 485 |  L 0 |  D 15.pgn  LL 2 | CT B | GAMES 500 |  W 486 |  L 0 |  D 14.pgn  LL 2 | CT W | GAMES 500 |  W 490 |  L 0 |  D 10.pgn  LL 3 | CT B | GAMES 500 |  W 351 |  L 103 |  D 46.pgn  LL 3 | CT W | GAMES 500 |  W 335 |  L 122 |  D 43.pgn  LL 4 | CT B | GAMES 500 |  W 131 |  L 318 |  D 51.pgn  LL 4 | CT W | GAMES 500 |  W 142 |  L 302 |  D 56.pgn  LL 5 | CT B | GAMES 500 |  W 64 |  L 392 |  D 44.pgn  LL 5 | CT W | GAMES 500 |  W 82 |  L 373 |  D 45.pgn  LL 6 | CT B | GAMES 500 |  W 3 |  L 479 |  D 18.pgn  LL 6 | CT W | GAMES 500 |  W 6 |  L 471 |  D 23.pgn
(+138 files in other folders)
